# media-sorter

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: release.yml
src/: banner.rs  file.rs  file_operations.rs  main.rs  parser.rs  sorter.rs  tool.rs
