[package]
name = "image_sorter"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
hex = "0.4.3"
indicatif = { version = "0.17", features = ["rayon"] }
rayon = "1.12.0"
walkdir = "2.5.0"
xxhash-rust = {version = "0.8", features = ["xxh3"]}
