[package]
name = "media-sorter"
version = "1.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
hex = "0.4.3"
indicatif = { version = "0.17", features = ["rayon"] }
rayon = "1.12.0"
walkdir = "2.5.0"
xxhash-rust = {version = "0.8", features = ["xxh3"]}
